[package]
name = "reth-trie-parallel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Parallel implementation of merkle root algorithm"

[lints]
workspace = true

[dependencies]
# reth
reth-primitives.workspace = true
reth-interfaces.workspace = true
reth-db.workspace = true
reth-trie.workspace = true
reth-provider.workspace = true
reth-tasks.workspace = true

# alloy
alloy-rlp.workspace = true
alloy-chains.workspace = true

# tracing
tracing.workspace = true

# misc
tokio = { workspace = true, default-features = false, features = ["sync"] }
rayon.workspace = true
thiserror.workspace = true
derive_more.workspace = true
auto_impl = "1"

[dev-dependencies]
# reth
reth-primitives = { workspace = true, features = ["test-utils", "arbitrary"] }
reth-db = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }

# misc
proptest.workspace = true
tokio = { workspace = true, default-features = false, features = ["sync", "rt", "macros"] }
tokio-stream.workspace = true
once_cell.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true
criterion.workspace = true
